--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,28 +1,42 @@
 .footerParentDiv {
   width: 100vw;
- 
 }
 .footerParentDiv .content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #ebeeef;
-  padding: 16px;
+  padding: 20px;
 }
 .footerParentDiv .content .heading {
   font-size: 24px;
   font-weight: bolder;
+  text-align: center;
+  padding-left: 20px;
 }
+
 
 .footerParentDiv .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px ;
+  padding: 10px;
   background: #002f34;
   color: whitesmoke;
+  height: 100px;
+  
 }
 
 .footerParentDiv .footer p {
   margin: 0;
+  padding: 0;
+  padding-right: 10px;
+}
+
+ul li {
+  /* list-style: none; */
+  text-align: left;
+  padding-right: 30px;
+  cursor: pointer;
+ 
 }
