--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -2,6 +2,7 @@
   border: 1px solid black;
   width: max-content;
   padding: 50px;
+  padding-top: 10px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -10,11 +11,12 @@
 }
 
 .loginParentDiv .input {
-  border-top-color: transparent;
-  border-left-color: transparent;
-  border-right-color: transparent;
-  outline-color: transparent;
-  
+  border-top-color: 1px solid black;
+  border-left-color: 1px solid black;
+  border-right-color: 1px solid black;
+  outline-color: rgba(0, 0, 0, 0.486);
+  width: 200px;
+  height: 25px;
 }
 
 .loginParentDiv button {
