--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -7,17 +7,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 6px;
- 
-
-  
 }
 .input {
   width: 90%;
-  
   border-radius: 25px;
   border: 1px solid #ddd;
   padding: 15px;
-  
 }
 
 .uploadBtn {
@@ -36,7 +31,12 @@
   border: 2px solid #002f34;
 }
 
-.label{
-   padding-left: 10px;
-   
+.label {
+  padding-left: 10px;
 }
+
+.img {
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
